--- a/src/views/index/components/TextUpload/TextUpload.module.scss
+++ b/src/views/index/components/TextUpload/TextUpload.module.scss
@@ -2,7 +2,7 @@
 .uploadContainer {
   display: flex;
   gap: 16px;
-  padding: 16px;
+  padding-left: 20px;
   height: 350px;
 
   @media (max-width: 768px) {
