--- a/src/views/index/index.scss
+++ b/src/views/index/index.scss
@@ -52,4 +52,11 @@
     margin: 10px 0px 10px 30px !important; // 与容器的负边距对应
     // margin-bottom: 25px !important;
   }
+  
+  .tree-container {
+    display: flex;
+    overflow: auto;
+    max-height: 60vh;
+    margin-top: 20px;
+  }
 }
